2.9.3:

2006-05-18  Murray Cumming  <murrayc@murrayc.com>

        * gdk/src/pixbufloader.hg: Add _CONVERSION() needed by write(), now that
        glibmm actually does the conversion.
        * gtk/src/editable.hg: Use _VFUNC_H() as we did before the big #ifdef changes.
        There is no need to stop using it, and it keeps the vfunc order the same as before.

2006-05-16  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: update the appendix of the tutorial about
	building with jhbuild

2006-05-16  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/Makefile.am: fix tutorial stylesheet location so that
	locally installed documentation can find the stylesheet.  Now the locally
	installed documentation and the published website documentation both install
	the stylesheet in the same relative location.

2006-05-16  Marko Anastasov <marko@marko.anastasov.name>

	* gtk/src/pagesetupunixdialog.ccg:
	* gtk/src/pagesetupunixdialog.hg: Changed constructor to make parent be the
	first parameter, and added an overload without it.
	* gtk/src/printjob.hg:
	* gtk/src/printoperation.hg: Fix some property wrappers to take RefPtrs when
	a property is a Glib object.
	* gtk/src/printunixdialog.ccg:
	* gtk/src/printunixdialog.hg: Constructor and property changes as above.

2006-05-16  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/actiongroup.ccg: add(): Pass char** instead of char*.

2006-05-16  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/actiongroup.ccg: add(): Use NULL instead of 0 with g_object_get(), to 
	avoid the warning about a missing sentinel.

2006-05-16  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/actiongroup.ccg: add(): Use g_object_get(), not 
	g_object_get_data() to get property data. Fixes a memory corruption crash.
	This was another regression introduced by the optional API changes.
	Bug #341895 from Philip Langdale.

2006-05-16  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/pagesetupunixdialog.hg: