@@ -6393,8 +6393,7 @@ reference-counting smartpointer. You might be familiar with
 <literal>std::auto_ptr&lt;&gt;</literal>, which is also a smartpointer, but
 <literal>Glib::RefPtr&lt;&gt;</literal> is much simpler, and more useful. We
 expect a future version of the C++ Standard Library to contain a
-reference-counting shared smartpointer, so a future version of &gtkmm; will
-probably use that instead.</para>
+reference-counting shared smartpointer, and a future version of &gtkmm; might possibly use that instead.</para>
 
 <para><ulink url="&url_refdocs_base_glib;RefPtr.html">Reference</ulink></para>
 
