@@ -2197,4 +2197,19 @@ source sizes, GTK+ picks one of the available sizes).
 </return>
 </function>
 
+<function name="gtk_table_get_homogeneous">
+<description>
+Returns whether the table cells are all constrained to the same
+width and height. (See set_homogenous())
+</description>
+<parameters>
+<parameter name="table">
+<parameter_description> a #GtkTable
+</parameter_description>
+</parameter>
+</parameters>
+<return> %TRUE if the cells are all constrained to the same size
+</return>
+</function>
+
 </root>
