@@ -1,3 +1,11 @@
+2006-05-19  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/gtkmm-tut.xml: RefPtr appendix: Reword the bit about using 
+	an official shared_ptr<>. It would not be that easy.
+	* gtk/src/gtk_docs_override.xml: gtk_table_get_homogenous(). Override because 
+	gtk_table_get_homogenous() is for some reason not being automatically changed to 
+	get_homongenous().
+
 2.9.3:
 
 2006-05-18  Murray Cumming  <murrayc@murrayc.com>
